--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,10 +6,11 @@
 @source '../**/*.js';
 
 @plugin "daisyui"{
-    themes: UTI --default;
+    themes: uti;
 }
+
 @plugin "daisyui/theme" {
-    name: "UTI";
+    name: "uti";
     default: true;
     prefersdark: false;
     color-scheme: "light";
@@ -19,10 +20,10 @@
     --color-base-content: oklch(21% 0.006 285.885);
     --color-primary: oklch(55% 0.195 38.402);
     --color-primary-content: oklch(93% 0.034 272.788);
-    --color-secondary: oklch(70% 0.213 47.604);
+    --color-secondary: oklch(76% 0.188 70.08);
     --color-secondary-content: oklch(94% 0.028 342.258);
-    --color-accent: oklch(27% 0.041 260.031);
-    --color-accent-content: oklch(55% 0.046 257.417);
+    --color-accent: oklch(42% 0.199 265.638);
+    --color-accent-content: oklch(38% 0.063 188.416);
     --color-neutral: oklch(75% 0.183 55.934);
     --color-neutral-content: oklch(92% 0.004 286.32);
     --color-info: oklch(74% 0.16 232.661);
@@ -36,15 +37,13 @@
     --radius-selector: 0.5rem;
     --radius-field: 0.25rem;
     --radius-box: 0.5rem;
-    --size-selector: 0.3125rem;
-    --size-field: 0.3125rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
     --border: 2px;
     --depth: 1;
     --noise: 0;
-  }
-  
+}
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans: 'Space Grotesk', sans-serif;
 }
