--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
     --color-base-200: oklch(98% 0 0);
     --color-base-300: oklch(95% 0 0);
     --color-base-content: oklch(21% 0.006 285.885);
-    --color-primary: oklch(55% 0.195 38.402);
+    --color-primary: oklch(0.5353 0.173 38.402);
     --color-primary-content: oklch(93% 0.034 272.788);
     --color-secondary: oklch(76% 0.188 70.08);
     --color-secondary-content: oklch(94% 0.028 342.258);
